# longitudinal-dev

./: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  HANDOFF_EDIT_SUGGESTIONS.md  Makefile  README.md  audit.toml  build.rs  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.claude/: instructions.md  viewer-polish-checklist.md  viewer-redesign-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security-audit.yml
app/: app.vue
app/components/: AppSubheader.vue  BookLandingCard.vue  TutorialsLandingCard.vue  VideoLandingCard.vue
app/layouts/:  default.vue  docs.vue
app/pages/: [...slug].vue  index.vue  resources.vue  sandbox.vue
artifacts/: additional_resources_audit.csv
config/: allowed_functions.txt  validation.toml
config/schemas/: additional_resources.schema.json  data_access.schema.json  data_preparation.schema.json  discussion.schema.json  overview.schema.json  post.schema.json  statistical_analysis.schema.json
content/: resources.yaml  tools.yaml  tutorial_curations.yaml
content/3.abcd-study/: 1.index.md
content/_2.tutorials/: index.md
content/_3.abcd-study_og/: 1.index.md  2.resources.md  _dir.yml
content/guides/: TEMPLATE.md  gee-reference.md  gee-walkthrough.md  gee.md  glmm-reference.md  glmm-walkthrough.md  glmm.md  lgcm-newtest-v1.md  lgcm-pilot-reference.md  lgcm-pilot-tutorial.md  lgcm-pilot.md  lgcm-reference.md  lgcm-walkthrough.md  lgcm.md  lmm-pilot-reference.md  lmm-pilot-tutorial.md  lmm-pilot.md  lmm-reference.md  lmm-walkthrough.md  lmm.md
content/posts/: blmm-interactive.post.json  blmm-intermediate.post.json  blmm-interpreting-results.post.json  blmm-neuroimaging.post.json  difference-score_paired-ttest.post.json  difference-score_simple-regression.post.json  gee-count.post.json  gee-time-varying-covariate.post.json  gee.post.json  glmm-binary.post.json  glmm-count.post.json  glmm-interactions.post.json  glmm.post.json  lcsm-basic-openmx.post.json  lcsm-basic.post.json  lcsm-bivariate.post.json  lgcm-basic-openmx.post.json  lgcm-basic.post.json  lgcm-multiple-groups.post.json  lgcm-nesting.post.json  lgcm-tic-openmx.post.json  lgcm-time-invariant-covariates.post.json  lmm-random-intercept.post.json  lmm-random-slopes.post.json  lmm-time-invariant-covariates.post.json  lmm-time-varying-covariates.post.json  mlgcm-openmx.post.json  mlgcm.post.json  residualized-change-score.post.json
content/tutorials/: blmm-interactive.md  blmm-intermediate.md  blmm-interpreting-results.md  blmm-neuroimaging.md  difference-score_paired-ttest.md  difference-score_simple-regression.md  gee-count.md  gee-time-varying-covariate.md  gee.md  glmm-binary.md  glmm-count.md  glmm-interactions.md  glmm.md  lcsm-basic-openmx.md  lcsm-basic.md  lcsm-bivariate.md  lgcm-basic-openmx.md  lgcm-basic.md  lgcm-multiple-groups.md  lgcm-nesting.md  lgcm-tic-openmx.md  lgcm-time-invariant-covariates.md  lmm-random-intercept.md  lmm-random-slopes.md  lmm-time-invariant-covariates.md  lmm-time-varying-covariates.md  mlgcm-openmx.md  mlgcm.md  residualized-change-score.md
crates/brain_viewer_facade/: Cargo.toml
crates/brain_viewer_facade/src/: lib.rs
crates/core_render/: Cargo.toml
crates/core_render/src/: color_source.rs  debug.rs  device.rs  lib.rs  orbit.rs  picking.rs  pipelines.rs  resources.rs  scene.rs  traits.rs  wgpu_renderer.rs
crates/core_render/src/shaders/: marker.wgsl  picking.wgsl  surface.wgsl
crates/core_render/tests/: render_sanity.rs
crates/interaction/: Cargo.toml
crates/parser/: Cargo.toml  README.md
crates/parser/src/: event_stream.rs  frontmatter.rs  lib.rs  main.rs  math.rs  sections.rs  syntax.rs  types.rs  utils.rs  validation.rs
crates/parser/src/parsers/: additional_resources.rs  data_access.rs  data_preparation.rs  discussion.rs  mod.rs  overview.rs  statistical_analysis.rs
crates/validator/: Cargo.toml  DESIGN.md
crates/validator/src/: cache.rs  config.rs  executor.rs  main.rs  mock_data.R  output.rs  privacy.rs  r_prelude.rs  rscript.rs  stages.rs  validators.rs
crates/validator/src/stages/: stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs
crates/viewer_app/: Cargo.toml  index.html
crates/viewer_app/src/: lib.rs  preferences.rs  types.rs
crates/viewer_app/src/components/: analysis_tools_panel.rs  brain_viewer.rs  camera_presets.rs  color_legend.rs  controls_card.rs  mod.rs  vertex_summary_table.rs
crates/viewer_app/src/components/brain_viewer/: canvas_info_overlay.rs  error_overlay.rs  focus_mode_header.rs  input_helpers.rs  loading_overlay.rs  url_state.rs
crates/viewer_app/src/data/: mod.rs
crates/viewer_app/src/renderer/: mod.rs  render_loop.rs  traits.rs  wgpu_adapter.rs
crates/writer/: Cargo.toml  README.md
crates/writer/src/: domain.rs  export.rs  lib.rs  state.rs  validation.rs
crates/writer/src/components/: app.rs  metadata_form.rs  mod.rs  section_editor.rs  section_nav.rs  utils.rs
crates/writer/tests/: parser_integration_test.rs
docs/: CONTRIBUTING.md  GUIDES_V1_1_TODO.md  GUIDE_INSPIRATIONS.md  HANDOFF_EDIT_SUGGESTIONS.md  MARKDOWN_PIPELINE.md  RESOURCES_PAGE_SPEC.md  TESTING.md  TUTORIALS_SCALING_PLAN.md  VIEWER_DESIGN_TOKENS.md  VIEWER_REDESIGN_PLAN.md  method-guides-structure-overview.md  ui_qa_checklist.md
public/: abcd_manuscript.docx
scripts/: README.md  convert_blmm_to_brs1.py  demote_guide_headings.py  generate_gee_figures.R  generate_glmm_figures.R  generate_lmm_figures.R  pre-commit
scripts/dev/: check.sh  (+4 more)
src/: base_path.rs  config.rs  copy_code_button.rs  edit_page_button.rs  editor_modal_island.rs  guide_catalog.rs  guide_interactivity.rs  guides.rs  index_generator.rs  lib.rs  main.rs  posts.rs  resource_catalog.rs  section_container.rs  syntax_highlight.rs  theme_toggle.rs  tools_catalog.rs  tutorial_catalog.rs  work_in_progress_badge.rs
style/: input.css
tests/: README.md  additional_resources_structure.rs  data_access_structure_complex.rs  data_preparation_structure.rs  discussion_structure.rs  helpers.rs  integration.rs  ssg_output_validation.rs  statistical_analysis_structure.rs  structure.rs
(+155 files in other folders)
