[package]
name = "core_render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = "1.0"
wgpu = { version = "23", features = ["webgpu"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
io_formats = { path = "../io_formats" }
neuro_surface = { path = "../neuro_surface" }
