[package]
name = "longitudinal_parser"
version = "0.1.0"
edition = "2021"
authors = ["Blog Team"]
description = "Markdown to JSON converter for blog posts"

[[bin]]
name = "md2json"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "=0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.0"
tempfile = "3.0"
