[package]
name = "longitudinal_validator"
version = "1.0.0"
edition = "2021"
authors = ["Blog Team"]
description = "Tutorial validation pipeline (5-stage markdown validation)"

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
# Markdown parser (workspace crate)
longitudinal_parser = { path = "../parser" }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"

# Cache and hashing
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1.0"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.37"
url = "2.5"

# R process execution (non-WASM only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wait-timeout = "0.2"
