[package]
name = "longitudinal_writer"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "2.0"

web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Storage",
    "Window",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
] }
wasm-bindgen = "=0.2.104"
js-sys = "0.3"

gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Link to existing parser for validation
# Temporarily disabled until workspace is set up
# blog-parser = { path = "../parser" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = ["leptos/ssr", "leptos/islands", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate", "leptos/islands"]
